<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/lay1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <android.widget.Button
                    android:id="@+id/button1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_margin="3dp"
                    android:background="@drawable/drawcircle"
                    android:text="@string/button1" />

                <android.widget.Button
                    android:id="@+id/button2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_margin="3dp"
                    android:background="@drawable/drawcircle"
                    android:text="@string/button2" />

                <android.widget.Button
                    android:id="@+id/button3"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="3dp"
                    android:layout_weight="1"
                    android:background="@drawable/drawcircle"
                    android:text="@string/button3" />

                <android.widget.Button
                    android:id="@+id/button4"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginLeft="50dp"
                    android:layout_marginRight="3dp"
                    android:layout_marginTop="3dp"
                    android:background="@drawable/drawcircle"
                    android:text="@string/button4" />

                <android.widget.Button
                    android:id="@+id/button5"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_margin="3dp"
                    android:background="@drawable/drawcircle"
                    android:text="@string/button5" />

                <android.widget.Button
                    android:id="@+id/button6"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_margin="3dp"
                    android:background="@drawable/drawcircle"
                    android:text="@string/button6"/>

                <android.widget.Button
                    android:id="@+id/button7"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="3dp"
                    android:layout_weight="1"
                    android:background="@drawable/drawcircle"
                    android:text="@string/button7" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/lay2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_below="@id/lay1">

                <android.widget.Button
                    android:id="@+id/button8"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="3dp"
                    android:layout_weight="1"
                    android:background="@drawable/drawcircle"
                    android:text="@string/button8" />

                <android.widget.Button
                    android:id="@+id/button9"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="3dp"
                    android:layout_weight="1"
                    android:background="@drawable/drawcircle"
                    android:text="@string/button9" />

                <android.widget.Button
                    android:id="@+id/button10"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="3dp"
                    android:layout_weight="1"
                    android:background="@drawable/drawcircle"
                    android:text="@string/button10" />

                <android.widget.Button
                    android:id="@+id/button11"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="3dp"
                    android:layout_weight="1"
                    android:background="@drawable/drawcircle"
                    android:text="@string/button11" />

                <android.widget.Button
                    android:id="@+id/button12"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="80dp"
                    android:layout_marginTop="3dp"
                    android:layout_marginRight="3dp"
                    android:layout_weight="1"
                    android:background="@drawable/drawcircle"
                    android:text="@string/button12" />

                <android.widget.Button
                    android:id="@+id/button13"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="3dp"
                    android:layout_weight="1"
                    android:background="@drawable/drawcircle"
                    android:text="@string/button13" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/lay3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/lay2"
                android:layout_marginTop="2dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/drawborder"
                    android:padding="20dp"
                    android:text="설명"
                    android:textSize="20sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/lay4"
                android:layout_width="match_parent"
                android:layout_height="1000dp"
                android:orientation="vertical"
                android:weightSum="10"
                android:layout_below="@id/lay3">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="6"
                    android:background="@drawable/draw_workspace"
                    android:layout_margin="10dp"
                    android:text="workspace"
                    android:textSize="20sp"
                    android:gravity="center"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="4"
                    android:background="@drawable/draw_popup"
                    android:textSize="20sp"
                    android:text="pop-up"
                    android:layout_margin="10dp"
                    android:gravity="center"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/lay5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="4"
                android:layout_below="@id/lay4">

                <android.widget.Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:layout_weight="1"
                    android:background="@drawable/drawborder"
                    android:text="웹뷰" />

                <android.widget.Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:layout_weight="1"
                    android:background="@drawable/drawborder"
                    android:text="스크립트" />

                <android.widget.Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:layout_weight="1"
                    android:background="@drawable/drawborder"
                    android:text="컴파일" />

                <android.widget.Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:layout_weight="1"
                    android:background="@drawable/drawborder"
                    android:text="미정" />

            </LinearLayout>
        </RelativeLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>